// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`wrap '' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`wrap '(this)' conditional success tests AST to match snapshot 1`] = `"this"`;

exports[`wrap 'this)' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`wrap '(this' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "')'",
  ],
  "pos": {
    "column": 6,
    "index": 5,
    "line": 1,
  },
}
`;

exports[`wrap ')this(' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`wrap 'foo' conditional failure tests Error to match snapshot 1`] = `
{
  "expected": [
    "'('",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
